--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: The Littoral Line
-email: callum@callumflack.design
+title: The Ramen Daily Line
+email: studio@tiep.me
 description: >- # this means to ignore newlines until "baseurl:"
   A newsletter about design, UX & the web thru the lens of people + attention. Discover adjacent possibles by exploring the atypical in-betweens that wash-up in the littoral zone.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://thelittoralline.callumflack.design" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://newsletter.tiep.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username: jekyll
 permalink: /:title/
