--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Anime France Top 1 website.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://bitjem.site" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ngonngonmoigio.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username: jekyll
 permalink: /:title/
